Added favicon to the project

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,13 @@
 <html ng-app="app">
   <head>
     <meta charset="UTF-8">
-    <title>Angular Rise: A Minimal AngularJS Application</title>
+    <title>Angular Rise</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="description" content="A Minimal AngularJS Application">
-    <meta name="keywords" content="angularjs, template, rise, starter">
+    <meta name="keywords" content="angularjs, rise, starter kit">
+    <link rel="icon" href="images/favicon_32x32.png?@@fingerprint" type="image/x-icon" />
     <link rel="stylesheet" href="styles/vendor.min.css?@@fingerprint">
     <link rel="stylesheet" href="styles/app.min.css?@@fingerprint">
     <script src="scripts/environment.min.js?@@fingerprint"></script>
